--- a/src/app/public/academy/academy.component.html
+++ b/src/app/public/academy/academy.component.html
@@ -35,25 +35,17 @@
 
         <div class="col-lg-6 col-lg-offset-3">
 
-          <form #newApplication="ngForm" (ngSubmit)="postApplication(newApplication)">
+          <form >
 
             <!-- <p> {{errorMessage}} </p> -->
             
-            <div class="form-group">
-              <label class="pull-left">Applicant Name</label>
-              <input type="text" name="applicant_name" placeholder="Your Name" class="form-control" ngModel>
-            </div> 
-            
-            
-            <div class="form-group">
-              <label class="pull-left">Applicant Phone Number</label>
-              <input type="text" name="applicant_contact" placeholder="Your Phone Number" class="form-control" ngModel>
-            </div> 
-            
-            
-            <textarea name="applicant_gist" placeholder="TELL US WHY YOU'D LIKE TO JOIN OUR ACADEMY IS LESS THAN 50 WORDS" cols="30" rows="10" class="form-control" ngModel></textarea> <br>
+            <input type="text" name="full-name" placeholder="Full Name" class="form-control"> <br>
 
-            <button type="submit" data-toggle="modal" data-target="#modal-default" class="btn btn-primary"> APPLY </button> <br> <br>
+            <input type="date" name="age" class="form-control" max="2002-12-31"> <br>
+
+            <textarea name="reason" placeholder="Sell yourself and earn your place in our academy in less than 50 words" cols="30" rows="10" class="form-control"></textarea> <br>
+
+            <button class="btn btn-primary"> APPLY </button> <br> <br>
 
           </form>
 
@@ -63,26 +55,4 @@
     </div>
   </div>
 </div>
-
 <app-footer></app-footer>
-
-<div class="modal fade" id="modal-default">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-        <h4 class="modal-title">ACADEMY APPLICATION</h4>
-      </div>
-      <div class="modal-body">
-        <p class="text-uppercase">{{modalmsg}}</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-    <!-- /.modal-content -->
-  </div>
-  <!-- /.modal-dialog -->
-</div>
