--- a/src/app/public/bookings/bookings.component.html
+++ b/src/app/public/bookings/bookings.component.html
@@ -12,110 +12,46 @@
         <br>
       </div>
     </div>
-  </div>
-  <div class="container">
-    <div class="row">
-        <div class="col-lg-6 ">
-          <div class="service">
-            <h3> CLIENT DETAILS </h3>
+    <div class="col-lg-8 col-lg-offset-2">
+      <div class="service">
+        <h3> BOOK A SERVICE </h3>
 
+
+        <br>
+
+        <div class="col-lg-6 col-lg-offset-3">
+
+          <form>
+
+            <select class="form-control" name="service">
+              <option value="">James</option>
+            </select>
             <br>
 
-            <div class="col-lg-12 ">
-
-                <div class="form-group">
-                  <label class="pull-left">Customer Name</label>
-                  <input type="text" name="customer_name" placeholder="Your Name" class="form-control" [(ngModel)]="customer_name">
-                </div>
-                
-                <div class="form-group">
-                  <label class="pull-left">Phone Number</label>
-                  <input type="text" name="client_phone_number" maxlength="11" placeholder="Phone Number" class="form-control" [(ngModel)]="client_phone_number">
-                </div>
-                
-
-            </div>
-
-          </div>
-        </div>
-        <div class="col-lg-6 ">
-          <div class="service">
-            <h3> SERVICE DETAILS </h3>
-
+            <select class="form-control" name="barber">
+              <option value="">James</option>
+            </select>
             <br>
 
-            <div class="col-lg-12">
+            <input type="datetime-local" class="form-control" name="time" min="2018-05-31">
+            <br>
 
-              <form id="newBooking" #newBookings="ngForm" (ngSubmit)="postBooking(newBookings)">
+            <input type="text" placeholder="Your Name" class="form-control" name="Customer Name">
+            <br>
 
-                  <div class="form-group">
-                    <label class="pull-left">Select Service</label>
-                    <select (change)="setPrice()" class="form-control" name="service" [(ngModel)]="current_service">
-                      <option value="0">Select Service</option>
-                      <option *ngFor="let service of services" value="{{service.service_name}}">{{service.service_name}}</option>
-                    </select>
-                  </div>
-                  
-                  <div class="form-group">
-                    <label class="pull-left">Select Barber</label>
-                    <select class="form-control" name="barber" ngModel>
-                      <option value="">Select Barber</option>
-                      <option *ngFor="let barber of staff" value="{{barber.staff_name}}">{{barber.staff_name}}</option>
-                    </select>
-                  </div>
-                  
-                  <div class="form-group">
-                    <label class="pull-left">Pick Date</label>
-                    <input type="date" class="form-control" name="date" min="{{maxDate}}" ngModel>
-                  </div>
+            <input type="text" placeholder="Price" class="form-control" name="price" disabled>
+            <br>
 
-                  <div class="form-group">
-                    <label class="pull-left">Pick Time</label>
-                    <input type="time" class="form-control" name="time" min="{{maxTime}}" ngModel>
-                  </div>
+            <button class="btn btn-primary"> BOOK NOW </button>
+            <br>
+            <br>
 
-                  <div class="form-group">
-                    <label class="pull-left">Price</label>
-                    <input type="text" placeholder="Price" class="form-control" name="price" disabled [(ngModel)]="price">
-                  </div>
+          </form>
 
-                  <br> <br>
-
-                  <div class="text-center">
-                    <button data-toggle="modal" data-target="#modal-default" class="btn btn-primary"> Book Now </button>
-                  </div>
-
-                  <br> <br>
-
-              </form>
-
-            </div>
-
-          </div>
         </div>
+
+      </div>
     </div>
   </div>
-
 </div>
 <app-footer></app-footer>
-
-<div class="modal fade" id="modal-default">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-        <h4 class="modal-title">Appointment Booking</h4>
-      </div>
-      <div class="modal-body">
-        <p>{{modalmsg}}</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-    <!-- /.modal-content -->
-  </div>
-  <!-- /.modal-dialog -->
-</div>
