--- a/src/app/public/merch/merch.component.html
+++ b/src/app/public/merch/merch.component.html
@@ -11,20 +11,150 @@
         <br>
       </div>
     </div>
-    <div *ngFor="let merch of merch" class="col-lg-12">
+    <div class="col-lg-12">
       <div class="container">
         <div class="text-center">
           <h2>
-            {{merch.category}}
+            Gents of Lagos Caps
           </h2>
         </div>
     
-        <div *ngFor="let item of merch.items" class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
           <a href="" class="thumbnail">
             <img src="assets/img/merch.jpg" alt="merch">
             <div class="caption text-center">
-              <h3> {{item.item_name}} </h3>
-              <p> {{item.item_price | currency:'₦'}} </p>
+              <h3> Gents of Lagos Snapback </h3>
+              <p> Price Goes Here </p>
+              <button class="btn btn-success"> Order Now </button>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+          <a href="" class="thumbnail">
+            <img src="assets/img/merch.jpg" alt="merch">
+            <div class="caption text-center">
+              <h3> Gents of Lagos Snapback </h3>
+              <p> Price Goes Here </p>
+              <button class="btn btn-success"> Order Now </button>
+            </div>
+          </a>
+        </div>
+        <div class="hidden-lg col-md-6 col-sm-6 col-xs-12">
+          <a href="" class="thumbnail">
+            <img src="assets/img/merch.jpg" alt="merch">
+            <div class="caption text-center">
+              <h3> Gents of Lagos Snapback </h3>
+              <p> Price Goes Here </p>
+              <button class="btn btn-success"> Order Now </button>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+          <a href="" class="thumbnail">
+            <img src="assets/img/merch.jpg" alt="merch">
+            <div class="caption text-center">
+              <h3> Gents of Lagos Snapback </h3>
+              <p> Price Goes Here </p>
+              <button class="btn btn-success"> Order Now </button>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-12">
+      <div class="container">
+        <div class="text-center">
+          <h2>
+            Gents of Lagos Tees
+          </h2>
+        </div>
+    
+        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+          <a href="" class="thumbnail">
+            <img src="assets/img/merch.jpg" alt="merch">
+            <div class="caption text-center">
+              <h3> Gents of Lagos Snapback </h3>
+              <p> Price Goes Here </p>
+              <button class="btn btn-success"> Order Now </button>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+          <a href="" class="thumbnail">
+            <img src="assets/img/merch.jpg" alt="merch">
+            <div class="caption text-center">
+              <h3> Gents of Lagos Snapback </h3>
+              <p> Price Goes Here </p>
+              <button class="btn btn-success"> Order Now </button>
+            </div>
+          </a>
+        </div>
+        <div class="hidden-lg col-md-6 col-sm-6 col-xs-12">
+          <a href="" class="thumbnail">
+            <img src="assets/img/merch.jpg" alt="merch">
+            <div class="caption text-center">
+              <h3> Gents of Lagos Snapback </h3>
+              <p> Price Goes Here </p>
+              <button class="btn btn-success"> Order Now </button>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+          <a href="" class="thumbnail">
+            <img src="assets/img/merch.jpg" alt="merch">
+            <div class="caption text-center">
+              <h3> Gents of Lagos Snapback </h3>
+              <p> Price Goes Here </p>
+              <button class="btn btn-success"> Order Now </button>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-12">
+      <div class="container">
+        <div class="text-center">
+          <h2>
+            Grooming Products
+          </h2>
+        </div>
+    
+        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+          <a href="" class="thumbnail">
+            <img src="assets/img/merch.jpg" alt="merch">
+            <div class="caption text-center">
+              <h3> Gents of Lagos Snapback </h3>
+              <p> Price Goes Here </p>
+              <button class="btn btn-success"> Order Now </button>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+          <a href="" class="thumbnail">
+            <img src="assets/img/merch.jpg" alt="merch">
+            <div class="caption text-center">
+              <h3> Gents of Lagos Snapback </h3>
+              <p> Price Goes Here </p>
+              <button class="btn btn-success"> Order Now </button>
+            </div>
+          </a>
+        </div>
+        <div class="hidden-lg col-md-6 col-sm-6 col-xs-12">
+          <a href="" class="thumbnail">
+            <img src="assets/img/merch.jpg" alt="merch">
+            <div class="caption text-center">
+              <h3> Gents of Lagos Snapback </h3>
+              <p> Price Goes Here </p>
+              <button class="btn btn-success"> Order Now </button>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+          <a href="" class="thumbnail">
+            <img src="assets/img/merch.jpg" alt="merch">
+            <div class="caption text-center">
+              <h3> Gents of Lagos Snapback </h3>
+              <p> Price Goes Here </p>
               <button class="btn btn-success"> Order Now </button>
             </div>
           </a>
